--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="./style/gallery.css">
 </head>
 <body>
-    <header class = 'header header--fragnance'>
+    <header class = 'header header--gallery'>
         <button  class="header__btn--close" onclick ="Close();">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path d="M3.5,7 C3.22385763,7 3,6.77614237 3,6.5 C3,6.22385763 3.22385763,6 3.5,6 L20.5,6 C20.7761424,6 21,6.22385763 21,6.5 C21,6.77614237 20.7761424,7 20.5,7 L3.5,7 Z M3.5,12 C3.22385763,12 3,11.7761424 3,11.5 C3,11.2238576 3.22385763,11 3.5,11 L20.5,11 C20.7761424,11 21,11.2238576 21,11.5 C21,11.7761424 20.7761424,12 20.5,12 L3.5,12 Z M3.5,17 C3.22385763,17 3,16.7761424 3,16.5 C3,16.2238576 3.22385763,16 3.5,16 L20.5,16 C20.7761424,16 21,16.2238576 21,16.5 C21,16.7761424 20.7761424,17 20.5,17 L3.5,17 Z"/>
@@ -20,7 +20,7 @@
         </button>
         <aside class="aside">
             <ul class="aside__nav">
-                <li class="aside__item"><a class = "aside__link" href="./htmlPages/shop.html">store</a></li>
+                <li class="aside__item"><a class = "aside__link" href=".//shop.html">store</a></li>
                 <li class="aside__item"><a class = "aside__link" href="./htmlPages/new_good.html">new products</a></li>
                 <li class="aside__item"><a class = "aside__link" href="#">gallery</a></li>
                 <li class="aside__item"><a class = "aside__link" href="./htmlPages/discounts.html">discounts</a></li>
@@ -36,7 +36,7 @@
     </header>
     <main class="wrapper main-page">
             <div class = 'main-page__inner inner-page--2'>
-                <div class="main-image main-image--fragrance">
+                <div class="main-image main-image--gallery">
                 </div>
                 <div class="main-page__content">
                     <h1 class="main-page__caption">GUCCI GUILTY</h1>
@@ -45,9 +45,9 @@
                     </p>
                 </div>
             </div>
-           
+
             <div class = 'main-page__inner inner-page--1'>
-                <div class="main-image main-image--fragrance">
+                <div class="main-image main-image--gallery">
                 </div>
                 <div class="main-page__content">
                     <h1 class="main-page__caption">GUCCI BLOOM</h1>
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class = 'main-page__inner inner-page--3'>
-                <div class="main-image main-image--fragrance">
+                <div class="main-image main-image--gallery">
                 </div>
                 <div class="main-page__content">
                     <h1 class="main-page__caption">THE ALCHEMIST'S GARDEN</h1>
