--- a/htmlPages/shop.html
+++ b/htmlPages/shop.html
@@ -78,7 +78,7 @@
                     <div class="option-bar__btn--sale">sale</div>
                 </button>
                 <div class="option-bar__sale-menu">
-                    <form class="option-bar__sale-inner">
+                    <form class="option-bar__form--sale">
                         <input type="radio" id="discounted" name="sale" value="discounted">
                         <input type="radio" id="all"        name="sale" value="all" checked>
 
@@ -123,7 +123,6 @@
     <script src="../js/shopping-cart.js"></script>
     <script src="../js/header-scroll.js"></script>
     <script src="../js/side-menu.js"></script>
-    <script src="../js/option-bar-scroll.js"></script>
     <script src="../js/sort.js"></script>
 
 </body>
