--- a/htmlPages/contacts.html
+++ b/htmlPages/contacts.html
@@ -25,7 +25,7 @@
         </aside>
         <nav class="header__nav">
             <a class="header__link" href="shop.html">store</a>
-            <a  class="header__link" href="#">new products</a>
+            <a  class="header__link" href="news.html">new products</a>
             <h1 class="header__logo">Gucci<span class="logo-caption">parfume</span></h1>
             <a  class="header__link" href="../index.html">gallery</a>
             <a  class="header__link" href="discounts.html">discounts</a>
