--- a/htmlPages/contacts.html
+++ b/htmlPages/contacts.html
@@ -32,8 +32,8 @@
             <a  class="header__link" href="contacts.html">find us</a>
         </nav>
     </header>
-    <div class="container">
-        <h1>view more
+    <!-- <div class="container"> -->
+        <!-- <h1>view more
             <div class="arrow-img"></div>
         </h1>
         <h2>look for us in online stores </h2>
@@ -44,7 +44,26 @@
         </div>
         <div>
             <img style="filter: invert(1);" class="contact-logo" src="../img/sephoraLogo.webp" alt=" " />
+        </div> -->
+    <!-- </div> -->
+    <div class="parallax-container">
+        <div class="parallax__slide parallax__slide--1"></div>
+        <div class="parallax__caption">
+            <img class="parallax__logo" src="../img/goldAppleLogo.jpeg" alt="golden apple logo">
+            <h2 class="parallax__heading parallax__heading--highlight">Golden Apple</h2>
+            <p>Russia's largest cosmetics and perfume store</p>
         </div>
-      </div>
+
+        <div class="parallax__slide parallax__slide--2"></div>
+
+        <div class="parallax__caption">
+            <img style="border-radius: 50%;" class="parallax__logo" src="../img/sephoraLogo.webp" alt="sephora logo" />
+            <h2 class="parallax__heading"><a class="shop-link">Sephora</a></h2>
+            <p>The largest beauty store in Europe</p>
+        </div>
+
+        <div class="parallax__slide parallax__slide--3"></div>
+    </div>
 <script type="text/javascript" src=".././js/contacts.js"></script></body>
+
 </html>
