--- a/htmlPages/contacts.html
+++ b/htmlPages/contacts.html
@@ -50,7 +50,7 @@
         <div class="parallax__slide parallax__slide--1"></div>
         <div class="parallax__caption">
             <img class="parallax__logo" src="../img/goldAppleLogo.jpeg" alt="golden apple logo">
-            <h2 class="parallax__heading parallax__heading--highlight">Golden Apple</h2>
+            <h2 class="parallax__heading parallax__heading--highlight"><a class="shop-link" href="https://goldapple.ru/brands/gucci">Golden Apple</a></h2>
             <p>Russia's largest cosmetics and perfume store</p>
         </div>
 
@@ -58,7 +58,7 @@
 
         <div class="parallax__caption">
             <img style="border-radius: 50%;" class="parallax__logo" src="../img/sephoraLogo.webp" alt="sephora logo" />
-            <h2 class="parallax__heading"><a class="shop-link">Sephora</a></h2>
+            <h2 class="parallax__heading"><a class="shop-link" href="https://www.sephora.com/brand/gucci">Sephora</a></h2>
             <p>The largest beauty store in Europe</p>
         </div>
 
