--- a/htmlPages/contacts.html
+++ b/htmlPages/contacts.html
@@ -51,7 +51,7 @@
         <div class="parallax__caption">
             <img class="parallax__logo" src="../img/goldAppleLogo.jpeg" alt="golden apple logo">
             <h2 class="parallax__heading parallax__heading--highlight"><a class="shop-link" href="https://goldapple.ru/brands/gucci">Golden Apple</a></h2>
-            <p>Russia's largest cosmetics and perfume store</p>
+            <p class="parallax__description">Russia's largest cosmetics and perfume store</p>
         </div>
 
         <div class="parallax__slide parallax__slide--2"></div>
@@ -59,7 +59,7 @@
         <div class="parallax__caption">
             <img style="border-radius: 50%;" class="parallax__logo" src="../img/sephoraLogo.webp" alt="sephora logo" />
             <h2 class="parallax__heading"><a class="shop-link" href="https://www.sephora.com/brand/gucci">Sephora</a></h2>
-            <p>The largest beauty store in Europe</p>
+            <p class="parallax__description">The largest beauty store in Europe</p>
         </div>
 
         <div class="parallax__slide parallax__slide--3"></div>
